--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,28 +4,63 @@
   box-sizing: border-box;
 }
 
+body {
+  background: #000;
+}
+
 .container {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
   font-size: 62.5%;
+  font-family: 'Sunflower', sans-serif;
 }
 /* HomePage */
 .home {
   position: absolute;
+  z-index: 99;
   width: 100%;
   height: 100vh;
-  background: blue;
+  background: #000;
+  color: #fefefe;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   &-title {
-    font-size: 4.5rem;
+    font-size: 6rem;
+    font-weight: 800;
   }
   &-button {
     font-size: 2rem;
+    width: 250px;
+    height: 80px;
+    border-radius: 20px;
+    border: none;
+    background: rgba(80,80,80,0.5);
+    color: #fefefe;
+    font-weight: 800;
+    cursor: pointer;
+  }
+  &-bear {
+    position: absolute;
+    bottom: 0;
+    left: 5%;
+  }
+  &-altPnj {
+    position: absolute;
+    bottom: 0;
+    left: 70%;
+    width: 225px;
+    height: 145px;
+  }
+  &-pnj {
+    position: absolute;
+    bottom: 0;
+    left: 85%;
+    width: 138px;
+    height: 190px;
   }
 }
 
@@ -35,7 +70,6 @@
   height: 100vh;
   background-image: url(../assets/backgrounds/bedroom.jpg);
   background-size: cover;
-  font-family: 'Sunflower', sans-serif;
 }
 
 /* Decor */
@@ -55,7 +89,7 @@
 .userInterface {
   width: 80%;
   height: 35vh;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   text-align: center;
   margin: 0 auto;
   color: #fefefe;
@@ -93,14 +127,30 @@
 /* Animations */
 .hideHome {
   top: -100vh;
-  animation: hideHomeAnim 3s;
+  animation: hideHomeAnim 2s;
 }
 
 @keyframes hideHomeAnim {
-  from {
+  0% {
     top: 0;
   }
-  to {
+  100% {
     top: -100vh;
+  }
+}
+
+.changeBg {
+  animation: changeBgAnim 0.2s;
+}
+
+@keyframes changeBgAnim {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
