--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,8 @@ body {
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%); }
+    transform: translateX(-50%);
+    opaity: .2; }
 
 /* Text Area */
 .userInterface {
@@ -122,10 +123,10 @@ body {
     top: 0; }
   100% {
     top: -100vh; } }
-.changeBg {
-  animation: changeBgAnim 0.3s; }
+.opacityAnim {
+  animation: opacity-anim 0.3s; }
 
-@keyframes changeBgAnim {
+@keyframes opacity-anim {
   0% {
     opacity: 1; }
   50% {
