--- a/styles/style.scss
+++ b/styles/style.scss
@@ -84,6 +84,7 @@ body {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+    opaity: .2;
   }
 }
 
@@ -145,11 +146,11 @@ body {
   }
 }
 
-.changeBg {
-  animation: changeBgAnim 0.3s;
+.opacityAnim {
+  animation: opacity-anim 0.3s;
 }
 
-@keyframes changeBgAnim {
+@keyframes opacity-anim {
   0% {
     opacity: 1;
   }
